# rag-pdf-qna

./: .gitignore  README.md  pyproject.toml
app/: env_vars.py  main.py
app/db/: pc_client.py
app/db/vector/: pc_client.py
app/middlewares/auth/: get_user_data.py
app/models/: schemas.py
app/routes/v1/: __init__.py
app/services/generation/: generate_answer.py
app/services/ingestion/: chunk.py  embed.py  process_pdf.py  store_embeds.py
app/services/retrieval/: augment_query.py  reranker.py  retrieve_context.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: env_vars.py  main.py
backend/app/db/: pc_client.py
backend/app/middlewares/auth/: get_user_data.py
backend/app/models/: schemas.py
backend/app/routes/v1/: __init__.py
backend/app/routes/v1/index_routes/: get_doc_names.py  query.py  upload.py
backend/app/services/: documents.py
backend/app/services/generation/: generate_answer.py
backend/app/services/ingestion/: chunk.py  extract_text_from_pdf.py  process_pdf.py  store_embeds.py
backend/app/services/retrieval/: augment_query.py  retrieve_context.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/: env_vars.ts  middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIChat.tsx  Header.tsx  ReduxProvider.tsx
frontend/src/db/: prisma_client.ts  user_queries.ts
frontend/src/middlewares/: middleware.ts
frontend/src/schemas/: user_schemas.ts
tests/: configure_custom_open_api.py
(+61 files in other folders)
